# arduino-mock

./: CMakeLists.txt  README.md
include/: Arduino.h  HardwareSerial.h  RedBot.h  Serial.h  String.h
src/: Arduino.cc  ArduinoMockAll.cc  EEPROM.cc  Redbot.cc  Serial.cc  Spark.cc  String.cc  WiFi.cc
test/: Arduino_unittest.cc  CMakeLists.txt  SPI_unittest.cc  test_all.cc
